Fix alignment issues (#150)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -135,6 +135,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-lg-10{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
 }
